--- a/assets/assets/styles.css
+++ b/assets/assets/styles.css
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 body{
-    background-color: darkgreen;
-    color: #161717;
+    background-color: pink;
+    color: #FF69B4;
     height:auto;
     min-height:100vh;
 }
